fix: dr type chips don't wrap

--- a/src/components/HomeSections/DrInfo/DrBasicInfo/DrBasicInfo.module.css
+++ b/src/components/HomeSections/DrInfo/DrBasicInfo/DrBasicInfo.module.css
@@ -7,5 +7,6 @@
 
 .BasicInfo .TypeContainer {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5em;
 }
